azure/config-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  namespace: autumn-dev
  labels: 
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: config-server-pod
        image: autumnreg.azurecr.io/autumn-ws-config-server:v0.1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8070
