azure/eureka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  namespace: autumn-dev
  labels: 
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: eureka-server-pod
        image: autumnreg.azurecr.io/autumn-ws-eureka-server:v0.1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8761
