azure/config-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: autumn-dev
  labels: 
    app: config-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8070
    name: "http"
  selector:
    app: config-server
