azure/eureka-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: autumn-dev
  labels: 
    app: eureka-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8761
    name: "http"
  selector:
    app: eureka-server
