azure/gateway-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: autumn-dev
  labels: 
    app: gateway-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: "http"
  selector:
    app: gateway-server
