azure/gateway-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-server-ingress
  namespace: autumn-dev
  labels: 
    app: gateway-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /autumnws/$2
spec:
  rules:
  - http:
      paths:
      - path: /autumnws(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port: 
              number: 80
