azure/zipkin-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  namespace: autumn-dev
  labels: 
    app: zipkin
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /zipkin/$2
spec:
  rules:
  - http:
      paths:
      - path: /zipkin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: zipkin-service
            port: 
              number: 80
